# server_rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  Procfile  README.md  filewhisper-backend.spec  install.ps1  install.sh  main.py  package-lock.json  package.json  pyproject.toml  rag.py  requirements.txt  server-rag-backend.spec  server_launcher.py  setup.py
.github/workflows/: desktop-build.yml
docs/: SHOW_HN.md  desktop-release.md  index.html
filewhisper/: __init__.py  main.py  rag.py  server_launcher.py
filewhisper/static/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
static/: index.html
